--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution { font-size: 11px; text-align: center; color: #fff; }
+    .attribution a { color: #52ffa8 }
   </style>
 </head>
 <body onload="getAdvice()">
@@ -23,7 +23,7 @@
     </div>
     <!-- Advice text goes here -->
     <div class="advice">
-     "<p id="adv"></p>"
+     <p id="adv"></p>
     </div>
     <img id="desktop" src="/images/pattern-divider-desktop.svg" alt="">
     <img id="mobile" src="/images/pattern-divider-mobile.svg" alt="">
@@ -38,7 +38,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/sarahmonem">Sara</a>.
   </div>
 
   <script src="fetch.js"></script>
