--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
   <div class="card">
     <div class="card-title">
        <!-- Advice ID goes here -->
-      <h1 > Advice # <span id="advice-id"></span></h1>
+      <h1 > ADVICE # <span id="advice-id"></span></h1>
     </div>
     <!-- Advice text goes here -->
     <div class="advice">
-     <p id="adv"></p>
+    <q id="adv">
+
+    </q>
+   
     </div>
     <img id="desktop" src="/images/pattern-divider-desktop.svg" alt="">
     <img id="mobile" src="/images/pattern-divider-mobile.svg" alt="">
