--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
   
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.frontendmentor.io/profile/sarahmonem">Sara</a>.
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://www.frontendmentor.io/profile/sarahmonem">Sara</a>.</p> 
   </div>
 
   <script src="fetch.js"></script>
