--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; color: #fff; }
+    .attribution { font-size: 11px; text-align: center; color: #fff; bottom: 0; position: absolute;  }
     .attribution a { color: #52ffa8 }
   </style>
 </head>
@@ -34,15 +34,16 @@
       <img src="/images/icon-dice.svg" alt="">
     </div>
   </div>
+  <div class="attribution">
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://www.frontendmentor.io/profile/sarahmonem">Sara</a>.</p> 
+  </div>
 </main>
 
 
 
   
-  <div class="attribution">
-    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://www.frontendmentor.io/profile/sarahmonem">Sara</a>.</p> 
-  </div>
+ 
 
   <script src="fetch.js"></script>
 </body>
